--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,6 +14,7 @@
 @import "global/reboot";
 @import "global/utils";
 @import "global/container";
+@import "global/navigation";
 
 // Blocks
 // ---------------------------------
@@ -23,6 +24,11 @@
 @import "blocks/custom-input";
 @import "blocks/custom-toggle";
 @import "blocks/custom-select";
+@import "blocks/header/header";
+@import "blocks/main/main";
+@import "blocks/footer/footer";
+@import "blocks/footer/footer-navigation";
+@import "blocks/footer/social";
 
 // ---------------------------------
 
