--- a/css/style.css
+++ b/css/style.css
@@ -411,7 +411,7 @@ html {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  font-family: "Placeholder", "Arial", sans-serif;
+  font-family: "Montserrat", "Verdana", sans-serif;
   color: #000000;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -614,9 +614,63 @@ button,
 
 .container {
   width: 100%;
-  max-width: 1920px;
+  min-width: 320px;
+  max-width: 1366px;
   margin: 0 auto;
-  padding: 0 40px;
+  padding: 0 103px;
+}
+
+.navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.navigation__logo--footer {
+  margin-right: 40px;
+}
+
+.navigation__list {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (-webkit-max-content)[4];
+  -ms-grid-columns: (max-content)[4];
+  grid-template-columns: repeat(4, -webkit-max-content);
+  grid-template-columns: repeat(4, max-content);
+  gap: 33px;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.navigation__list--footer {
+  margin: 0 auto 0 0;
+}
+
+.navigation__item {
+  max-width: 170px;
+}
+
+.navigation__item a {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  display: block;
+  padding: 10px 0;
+  font-family: "Montserrat", "Verdana", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #f9fbfd;
+}
+
+.navigation__button {
+  display: none;
 }
 
 .btn {
@@ -1273,6 +1327,86 @@ button,
   color: #15ab07;
 }
 
+.header {
+  position: absolute;
+  background-color: transparent;
+  width: 100%;
+  padding: 35px 0;
+  z-index: 3;
+}
+
+.header__navigation {
+  position: relative;
+}
+
+.main__promo {
+  width: 100%;
+  position: relative;
+  margin: 0 auto;
+  min-height: 650px;
+  background-color: #011c40;
+}
+
+.main__promo img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  position: absolute;
+  -o-object-position: 50% 100%;
+  object-position: 50% 100%;
+}
+
+.main__promo-description {
+  position: relative;
+  padding: 270px 103px 276px 198px;
+  font-family: "Montserrat", "Verdana", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 25px;
+  color: #f9fbfd;
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.main__promo-description h2 {
+  margin: 0;
+  margin-bottom: 13px;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 54px;
+  line-height: 66px;
+}
+
+.main__promo-description p {
+  margin: 0;
+}
+
+.footer {
+  background-color: #011c40;
+  width: 100%;
+  padding: 50px 0;
+}
+
+.social__list {
+  margin: 0;
+  padding: 0;
+  max-width: 120px;
+  margin-top: 7px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  gap: 15px;
+  -webkit-transform: translateX(3px);
+  -ms-transform: translateX(3px);
+  transform: translateX(3px);
+}
+
 /* @mixin hover-focus {
     @media (hover: hover) {
       &:hover:not(.focus-visible) {
@@ -1314,21 +1448,21 @@ button,
   }
 */
 
-@media (max-width: 1439px) {
+@media (max-width: 1365px) {
   .container {
-    padding: 0 32px;
+    padding: 0 50px;
   }
 }
 
 @media (max-width: 1023px) {
   .container {
-    padding: 0 24px;
+    padding: 0 45px;
   }
 }
 
 @media (max-width: 767px) {
   .container {
-    padding: 0 16px;
+    padding: 0 15px;
   }
 
   .modal__wrapper {
