--- a/source/sass/blocks/main/main.scss
+++ b/source/sass/blocks/main/main.scss
@@ -5,6 +5,14 @@
   min-height: 650px;
   background-color: $color-tangaroa;
 
+  @media (max-width: $tablet-width) {
+    min-height: 638px;
+  }
+
+  @media (max-width: $mobile-width) {
+    min-height: 500px;
+  }
+
   img {
     width: 100%;
     height: 100%;
@@ -26,6 +34,16 @@
   color: $color-alice-blue;
   text-shadow: 0 4px 4px $color-silver;
 
+  @media (max-width: $tablet-width) {
+    padding-top: 267px;
+    padding-bottom: 276px;
+  }
+
+  @media (max-width: $mobile-width) {
+    padding-top: 175px;
+    padding-bottom: 178px;
+  }
+
   h2 {
     margin: 0;
     margin-bottom: 13px;
@@ -33,9 +51,30 @@
     font-style: normal;
     font-size: 54px;
     line-height: 66px;
+
+    @media (max-width: $tablet-width) {
+      font-size: 50px;
+      line-height: 61px;
+    }
+
+    @media (max-width: $mobile-width) {
+      margin-bottom: 11px;
+      font-size: 36px;
+      line-height: 45px;
+    }
   }
 
   p {
     margin: 0;
+
+    @media (max-width: $tablet-width) {
+      font-size: 18px;
+      line-height: 22px;
+    }
+
+    @media (max-width: $mobile-width) {
+      font-size: 16px;
+      line-height: 23px;
+    }
   }
 }
