--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -10,11 +10,18 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
 
+
 $color-neon-blue:                   #2c39f2;
 $color-torch-red:                   #ff1553;
-$color-tangaroa:                    #011c40;
 $color-alice-blue:                  #f9fbfd;
+$color-tangaroa:                    #011c40;
+$color-tangaroa-accent:             rgba(1, 28, 64, 0.7);
+$color-alice-blue:                  #f9fbfd;
+$color-solitude:                    #e3ecf6;
+$color-quartz:                      #d8d8d9;
 $color-silver:                      rgba(0, 0, 0, 0.25);
+$color-sapphire:                    #101a56;
+$color-summer-sky:                  #29a3cc;
 
 // Gradient
 
@@ -54,6 +61,9 @@ $vp-1280:                           1280px;
 $vp-1366:                           1366px;
 $vp-1440:                           1440px;
 $vp-1920:                           1920px;
+
+$tablet-width:                      1023px;
+$mobile-width:                      767px;
 
 // Retina
 // ---------------------------------
