добавляет адаптацию каталога, форму и карту

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,6 +28,9 @@
 @import "blocks/main/main";
 @import "blocks/main/intro";
 @import "blocks/main/advantages";
+@import "blocks/main/catalog";
+@import "blocks/main/form";
+@import "blocks/main/contacts";
 @import "blocks/footer/footer";
 @import "blocks/footer/footer-navigation";
 @import "blocks/footer/social";
