--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -64,6 +64,7 @@ $vp-1920:                           1920px;
 
 $tablet-width:                      1023px;
 $mobile-width:                      767px;
+$small-desktop-width: 1150px;
 
 // Retina
 // ---------------------------------
