--- a/source/sass/blocks/footer/social.scss
+++ b/source/sass/blocks/footer/social.scss
@@ -8,6 +8,7 @@
   justify-content: flex-end;
   gap: 15px;
   transform: translateX(3px);
+  list-style-type: none;
 
   @media (max-width: $tablet-width) {
     margin-top: 0;
@@ -27,6 +28,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  &:focus,
+  &:hover {
+    opacity: 0.7;
+  }
+
+  svg {
+    fill: $color-alice-blue;
+
+    &:active {
+      fill: $color-summer-sky;
+    }
+  }
 
   @media (max-width: $tablet-width) {
     width: 20px;
