--- a/source/sass/blocks/main/catalog.scss
+++ b/source/sass/blocks/main/catalog.scss
@@ -22,6 +22,7 @@
       margin-bottom: 30px;
       font-size: 24px;
       line-height: 36px;
+      letter-spacing: -1px;
     }
   }
 
@@ -125,7 +126,7 @@
   &:focus,
   &:focus-within {
     outline: none;
-    box-shadow: 0 0 25px $color-summer-sky;
+    box-shadow: 0 0 25px $color-tangaroa;
 
     .catalog__item-content {
       padding: 27px 25px 23px;
