--- a/source/sass/blocks/main/contacts.scss
+++ b/source/sass/blocks/main/contacts.scss
@@ -105,7 +105,7 @@
 
 .contacts__item {
   @media (max-width: $tablet-width) {
-    padding-right: 35px;
+    padding-right: 25px;
 
     &--adress {
       svg {
@@ -116,6 +116,10 @@
 
   @media (max-width: $mobile-width) {
     padding-right: 0;
+
+    span {
+      letter-spacing: -0.3px;
+    }
 
     &--adress {
       svg {
