--- a/source/sass/blocks/main/intro.scss
+++ b/source/sass/blocks/main/intro.scss
@@ -54,10 +54,11 @@
     font-weight: 600;
     font-size: 28px;
     line-height: 42px;
+    letter-spacing: -1px;
 
     @media (max-width: $tablet-width) {
       margin-bottom: 14px;
-      margin-right: 30px;
+      margin-right: 100px;
       font-size: 26px;
       line-height: 37px;
     }
@@ -66,6 +67,7 @@
       margin-bottom: 15px;
       font-size: 24px;
       line-height: 34px;
+      margin-right: 90px;
     }
   }
 
