--- a/source/sass/blocks/main/main.scss
+++ b/source/sass/blocks/main/main.scss
@@ -51,6 +51,7 @@
     font-style: normal;
     font-size: 54px;
     line-height: 66px;
+    letter-spacing: -2px;
 
     @media (max-width: $tablet-width) {
       font-size: 50px;
@@ -61,11 +62,13 @@
       margin-bottom: 11px;
       font-size: 36px;
       line-height: 45px;
+      letter-spacing: -1px;
     }
   }
 
   p {
     margin: 0;
+    letter-spacing: 0.5px;
 
     @media (max-width: $tablet-width) {
       font-size: 18px;
