--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -14,6 +14,5 @@
   font-family: "";
 
   font-display: swap;
-  src:
-    url("../fonts/.woff2") format("woff2");
+  src: url("../fonts/.woff2") format("woff2");
 }
