--- a/source/sass/blocks/main/advantages.scss
+++ b/source/sass/blocks/main/advantages.scss
@@ -106,8 +106,12 @@
 
 .advantages__item {
   max-width: 360px;
-  padding: 30px 34px 45px 30px;
+  padding: 30px 34px 40px 30px;
   background-color: $color-alice-blue;
+
+  p {
+    margin-bottom: 5px;
+  }
 
   svg {
     margin-bottom: 15px;
@@ -119,7 +123,7 @@
   }
 
   @media (max-width: $tablet-width) {
-    padding: 26px 16px 19px 20px;
+    padding: 26px 16px 14px 20px;
 
     &--ship {
       svg {
