--- a/source/sass/blocks/main/contacts.scss
+++ b/source/sass/blocks/main/contacts.scss
@@ -105,7 +105,7 @@
 
 .contacts__item {
   @media (max-width: $tablet-width) {
-    padding-right: 25px;
+    padding-right: 36px;
 
     &--adress {
       svg {
@@ -117,10 +117,6 @@
   @media (max-width: $mobile-width) {
     padding-right: 0;
 
-    span {
-      letter-spacing: -0.3px;
-    }
-
     &--adress {
       svg {
         margin-top: 5px;
@@ -131,6 +127,10 @@
 
 .contacts__link {
   user-select: none;
+
+  span {
+    color: $color-tangaroa;
+  }
 
   &:hover {
     opacity: 0.6;
