--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -21,6 +21,7 @@ $color-quartz:                      #d8d8d9;
 $color-silver:                      rgba(0, 0, 0, 0.25);
 $color-sapphire:                    #101a56;
 $color-summer-sky:                  #29a3cc;
+$prussian-blue:                     #002b6680;
 
 // Gradient
 
