добавляет правки после тестировщиков ч.2

--- a/source/sass/blocks/main/catalog.scss
+++ b/source/sass/blocks/main/catalog.scss
@@ -152,6 +152,7 @@
     .catalog__item-description {
       height: 270px;
       overflow-y: scroll;
+      scrollbar-width: none;
 
       &::-webkit-scrollbar {
         display: none;
